fix: ajuste methods listDays